tests/functional2/lang/parser-token-whitespace/(00.).err.exp
error: syntax error, expecting ')'
       at «string»:1:13:
            1| with {}; (00.)
             |             ^
